# SIPET

./: .env  .env.example  .gitignore  Descripcion.txt  Procfile  README.md  alembic.ini  capacitacion.txt  deploy-avancoop.sh  deploy-polo.sh  deploy-polotitlan.sh  deploy-sipet.sh  documento_funcional_ia_sipet.md  encuestas.txt  estilos_globales.md  estructura.txt  find_none.py  gastos  ia.txt  main.py  main_backend.txt  main_frontend.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  reiniciar.sh  requirements.txt  strategic_planning_development.db.bak  tailwind.config.js
fastapi_modulo/modulos/multitienda/marketplace/backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
fastapi_modulo/modulos/multitienda/marketplace/backend/apps/analytics/: api.py  models.py  routes.py
fastapi_modulo/modulos/multitienda/marketplace/backend/apps/cart/: models.py  routes.py
fastapi_modulo/modulos/multitienda/marketplace/backend/apps/catalog/: routes_filters.py  routes_full.py  routes_public.py
fastapi_modulo/modulos/multitienda/marketplace/backend/apps/commissions/: admin.py  models.py  routes.py  utils.py
fastapi_modulo/modulos/multitienda/marketplace/backend/core/: db.py  dependencies.py
fastapi_modulo/modulos/multitienda/marketplace/backend/scripts/: export_backend_template.sh
fastapi_modulo/modulos/multitienda/marketplace/backend/tasks/: analytics_tasks.py  commission_tasks.py  messaging_tasks.py
fastapi_modulo/modulos/multitienda/marketplace/backend/templates/: backend_template.html  blank.html
(+1613 files in other folders)
